Example design: correct colour contrast #292

--- a/examples/css/github.css
+++ b/examples/css/github.css
@@ -30,7 +30,8 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 .hljs-variable,
 .hljs-template-variable,
 .hljs-tag .hljs-attr {
-  color: #008080;
+  /* Original value hsl(180, 100%, 25%) didn’t pass WCAG AA */
+  color: hsl(180, 100%, 23%);
 }
 
 .hljs-string,
